# stsci-package-template

./: .bandit.yaml  .flake8  .gitignore  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  conftest.py  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci_cron_weekly.yml  ci_workflows.yml  tests.yml  tests_scheduled.yml
docs/: conf.py  index.rst
docs/packagename/: example.rst
licenses/: LICENSE.rst
packagename/: __init__.py  example_mod.py
packagename/tests/: conftest.py  test_example.py
