[metadata]
package_name = packagename
description = My pretty cool package
long_description = A package which contains stuff that do things
author = STScI
author_email = help@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/stsci-package-template
description-file = README.rst
url = http://www.stsci.edu/
homepage = http:://www.stsci.edu/

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build relic

[flake8]
# See http://flake8.pycqa.org/en/latest/user/configuration.html

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
